--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
    <link rel="stylesheet" href="css/style.css">
    <link href="https://fonts.googleapis.com/css?family=Merienda:700|Montserrat:400,500,600" rel="stylesheet">
 
+   <script type="text/javascript" src="scripts/data.js">
+
+   </script>
 
    <title>Opportunity</title>
 </head>
@@ -15,7 +18,7 @@
    <header>
       <img src="Images/banner.jpeg" alt="" class="headImg">
       <div class="navDraw">
-         <a href="#" class="homePage">
+         <a href="index.html" class="homePage">
             <div class="name">
                Opportunity
             </div>
@@ -25,8 +28,8 @@
             <ul class="nav">
                <li><a href="" class="navBut active">HOME</a></li>
                <li><a href="" class="navBut">CATEGORIES</a></li>
-               <li><a href="" class="navBut">ABOUT US</a></li>
-               <li><a href="" class="navBut">CONTACT US</a></li>
+               <li><a href="about.html" class="navBut">ABOUT US</a></li>
+               <li><a href="contactus.html" class="navBut">CONTACT US</a></li>
 
             </ul>
          </nav>
@@ -34,27 +37,83 @@
 
    </header>
 
-   <div class="sidebar">
-      <h3 class="sideHead">
-         CATEGORIES
-      </h3>
-      <ul>
-         <li><a href="" class="category">Writer</a></li5>
-         <li><a href="" class="category"></a></li5>
-      </ul>
+   <div class="center">
+      <div class="sidebar">
+         <h3 class="sideHead">
+            CATEGORIES
+         </h3>
+         <ul>
+            <li><a href="" class="category" id="write" onclick="list(0)">ALL</a></li>
+            <li><a href="" class="category" id="videographers" onclick="list(5)">Writers</a></li>
+            <li><a href="" class="category" id="videographers" onclick="list(5)">Poets</a></li>
+            <li><a href="" class="category" id="Musicians" onclick="list(1)">Musicians</a></li>
+            <li><a href="" class="category" id= "crafts" onclick="list(3)">Sketch Artists</a></li>
+            <li><a href="" class="category" id= "dancers" onclick="list(2)">Dancers</a></li>
+            <li><a href="" class="category" id="photographers" onclick="list(4)">Photography</a></li>
+            <li><a href="" class="category" id="videographers" onclick="list(5)">Videography</a></li>
+            <li><a href="" class="category" id="videographers" onclick="list(5)">Caliography</a></li>
+            <li><a href="" class="category" id="videographers" onclick="list(5)">Wood Crafts</a></li>
+            <li><a href="" class="category" id="videographers" onclick="list(5)">Handicrafts</a></li>
 
+         </ul>
+
+
+
+
+      </div>
+
+      <div class="mainContent">
+         <h3 class ="heading"> Our top trending Professionals...</h3>
+
+         <div class="heroes">
+            <div class="hero">
+
+               <h4>Ayush</h4>
+               <h2>experience</h2>
+            </div>
+            <div class="hero">
+               <h4>Arpan</h4>
+               <h2>experience</h2>
+            </div>
+            <div class="hero">
+               <h4>Arpit</h4>
+               <h2>experience</h2>
+            </div>
+            <div class="hero">
+               <h4>Karan</h4>
+               <h2>experience</h2>
+            </div>
+            <div class="hero">
+               <h4>Nishant</h4>
+               <h2>experience</h2>
+            </div>
+            <div class="hero">
+               <h4>Gaurav</h4>
+               <h2>experience</h2>
+            </div>
+
+
+         </div>
+
+
+
+      </div>
    </div>
 
-   <div class="mainContent">
-      <h3 class ="heading"> Our top trending Professionals...</h3>
-      
-
+   <div class="footer">
+      <div class="element">
+         <div class="team">
+            <h3>TEAM</h3>
+            <ul>
+               <li class="mem">Pranjal Agrawal</li>
+               <li class="mem">Noopur Rathore</li>
+               <li class="mem">Yasir Kadri</li>
+               <li class="mem">Ayush Agrawal</li>
+            </ul>
+         </div>
+         <div class="rights"> All rights reserved with &copy Typhoon</div>
+         <div class="social">Social Media Handles coming soon</div>
+      </div>
    </div>
-
-
-   <footer>
-
-   </footer>
-
 </body>
 </html>
